# knowledge-alakazam

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  NOTES.md  README.md  about_start.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  query_rag.sh  review.md  upload_sample_docs.sh
app/: __init__.py  config.py  db.py  ingest_service.py  main.py  observability.py  rag_parsers.py  rag_runtime.py  s3_assets.py  schemas.py
app/api/: health.py  ingest.py  query.py  wiki.py
db/: Dockerfile.postgres
db/init/: 001_extensions.sql
docs/: architecture.md  operations.md
migrations/: env.py
migrations/versions/: 20260705_0001_llm_wiki_canonical_store.py  20260706_0002_ingest_job_leases.py
sample-docs/: Deities & Mythology.md  Factions.md  Geography.md  Key Characters.md  Magic Technology & Artifacts.md  Monsters & Creatures.md  Races.md  Story Arcs.md  Timeline.md  World Overview.md
tasks/: raw.md  task 0.md  task 1.md  task 10.md  task 11.md  task 2.md  task 3.md  task 4.md  task 5.md  task 6.md  task 7.md  task 8.md  task 9.md
tests/: test_config.py  test_health.py  test_ingest_api.py  test_ingest_service.py  test_ingest_worker.py  test_query.py  test_rag_parsers.py  test_rag_runtime.py  test_s3_assets.py  test_wiki_compiler.py  test_wiki_models.py  test_wiki_repository.py  test_wiki_service.py  test_wiki_validators.py
wiki/: __init__.py  compiler.py  models.py  repository.py  service.py  validators.py
worker/: ingest_worker.py
