[project]
name = "knowledge-alakazam"
version = "0.1.0"
description = "Production-oriented RAG service with FastAPI, LightRAG, PostgreSQL, and S3-compatible asset storage."
requires-python = ">=3.11, <3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "boto3>=1.43.40",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]

[project.optional-dependencies]
rag = [
    "lightrag-hku>=1.5.4",
    "raganything>=1.3.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
src = ["app", "wiki", "worker", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
exclude = "(^|/)\\.venv/"
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
